--- a/projectstyle.css
+++ b/projectstyle.css
@@ -1,7 +1,29 @@
-*{
-    background-color: rgb(170, 244, 162);
-}
+
 h1{
     color: rgb(230, 153, 166);
     border-bottom: 10px dotted rgb(139, 209, 231);
+}
+h2{
+    color: rgb(47, 255, 47);
+}
+h3{
+    border: 5px solid blue;
+    padding: 30px;
+    margin: 50px;
+    width: 200px;
+    height: 150px;
+}
+p.sv{
+    border: 5px solid gray;
+    padding: 30px;
+    margin: 50px;
+    width: 200px;
+    height: 150px;
+}
+p.jn{
+    border: 5px solid gray;
+    padding: 30px;
+    margin: 50px;
+    width: 200px;
+    height: 150px;
 }
