--- a/projectstyle.css
+++ b/projectstyle.css
@@ -7,11 +7,7 @@ h2{
     color: rgb(47, 255, 47);
 }
 h3{
-    border: 5px solid blue;
-    padding: 30px;
-    margin: 50px;
-    width: 200px;
-    height: 50px;
+   border-bottom: 10px gray;
 }
 p.sv{
     border: 5px solid gray;
