--- a/projectstyle.css
+++ b/projectstyle.css
@@ -15,6 +15,7 @@ p.sv{
     margin: 50px;
     width: 200px;
     height: 40px;
+    background: white;
 }
 p.jn{
     border: 5px solid blue;
@@ -22,4 +23,9 @@ p.jn{
     margin: 50px;
     width: 500px;
     height: 100px;
+    background: white;
 }
+p {
+    font-family: arial;
+  }
+  
