--- a/projectstyle.css
+++ b/projectstyle.css
@@ -31,6 +31,30 @@ thead{
     background-color: aqua;
 }
 table{
+    table-layout: fixed;
+    width: 100%;
+    border-collapse: collapse;
     border: 3px solid gray;
+
 }
-  
+thead th:nth-child(1) {
+    width: 30%;
+}
+thead th:nth-child(2) {
+    width: 15%;
+}
+thead th:nth-child(3) {
+    width: 10%;
+}
+thead th:nth-child(4) {
+    width: 10%;
+}
+thead th:nth-child(5) {
+    width: 25%;
+}
+thead th:nth-child(6) {
+    width: 10%;
+}
+tbody td {
+    text-align: center;
+}
